Model normals not updating in a modifier stack after a deform modifier #62633

Closed
opened 2019-03-16 03:01:48 +01:00 by Cody Winchester · 3 comments

System Information
Operating system:Windows 10

Blender Version
Broken: Blender 2.80 hash fb4bb61155

Short description of error
Objects normals not getting properly updated in middle of a modifier stack after a deform modifier

Exact steps for others to reproduce the error
1 - Start with a Suzanne model
2 - Add a deform modifier such as simple deform and crank up the angle. Other deform modifiers like the warp modifier get the same error.
3 - Add a displace modifier after the simple deform and you will notice it deforms along the wrong normals
4 - As a way to force it to update the normals you can add a Modify modifier such as the weighted normal modifier and put it above the displace modifier. Even if it isn't doing anything it forces the normals to update to the deformed model and it works as expected. Also if you have a generate modifier like a subsurf at the top of the stack the normals don't break.

Normals Not Updating.blend

**System Information** Operating system:Windows 10 **Blender Version** Broken: Blender 2.80 hash fb4bb611559b **Short description of error** Objects normals not getting properly updated in middle of a modifier stack after a deform modifier **Exact steps for others to reproduce the error** 1 - Start with a Suzanne model 2 - Add a deform modifier such as simple deform and crank up the angle. Other deform modifiers like the warp modifier get the same error. 3 - Add a displace modifier after the simple deform and you will notice it deforms along the wrong normals 4 - As a way to force it to update the normals you can add a Modify modifier such as the weighted normal modifier and put it above the displace modifier. Even if it isn't doing anything it forces the normals to update to the deformed model and it works as expected. Also if you have a generate modifier like a subsurf at the top of the stack the normals don't break. [Normals Not Updating.blend](https://archive.blender.org/developer/F6832398/Normals_Not_Updating.blend)

Added subscriber: @CodyWinchester

Added subscriber: @CodyWinchester
Bastien Montagne was assigned by Sebastian Parborg 2019-03-18 13:59:05 +01:00

This issue was referenced by c5fe6ed96b

This issue was referenced by c5fe6ed96bd1e6a20253bbeb2a20e4944781787a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62633
No description provided.